--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node scripts/switch-db.js && next dev",
+    "build": "node scripts/switch-db.js && prisma generate && next build",
     "start": "next start",
-    "postinstall": "prisma generate",
-    "db:push": "prisma db push",
-    "db:seed": "node prisma/seed.js"
+    "postinstall": "node scripts/switch-db.js && prisma generate",
+    "db:push": "node scripts/switch-db.js && prisma db push",
+    "db:seed": "node prisma/seed.js",
+    "db:migrate": "node scripts/switch-db.js && prisma migrate deploy",
+    "db:migrate-prod": "node scripts/migrate-production.js",
+    "db:studio": "node scripts/switch-db.js && prisma studio",
+    "db:switch-sqlite": "node -e \"require('fs').copyFileSync('prisma/schema.sqlite.prisma', 'prisma/schema.prisma')\"",
+    "db:switch-postgres": "node -e \"require('fs').copyFileSync('prisma/schema.prisma', 'prisma/schema.prisma')\""
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
