--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "functions": {
-    "app/api/**/*.js": {
-      "maxDuration": 30
-    }
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "env": {
+    "NODE_ENV": "production"
   }
 }
