--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "node scripts/switch-db.js && next dev",
-    "build": "node scripts/pre-build.js && prisma generate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "postinstall": "node scripts/switch-db.js && prisma generate",
+    "postinstall": "prisma generate",
     "db:push": "node scripts/switch-db.js && prisma db push",
     "db:seed": "node prisma/seed.js",
     "db:migrate": "node scripts/switch-db.js && prisma migrate deploy",
@@ -14,7 +14,7 @@
     "db:studio": "node scripts/switch-db.js && prisma studio",
     "db:switch-sqlite": "node -e \"require('fs').copyFileSync('prisma/schema.sqlite.prisma', 'prisma/schema.prisma')\"",
     "db:switch-postgres": "node -e \"require('fs').copyFileSync('prisma/schema.prisma', 'prisma/schema.prisma')\"",
-    "vercel-build": "node scripts/pre-build.js && prisma generate && next build"
+    "vercel-build": "prisma generate && next build"
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
