--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:studio": "node scripts/switch-db.js && prisma studio",
     "db:switch-sqlite": "node -e \"require('fs').copyFileSync('prisma/schema.sqlite.prisma', 'prisma/schema.prisma')\"",
     "db:switch-postgres": "node -e \"require('fs').copyFileSync('prisma/schema.prisma', 'prisma/schema.prisma')\"",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && node scripts/seed-production.js && next build"
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
